// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`workers/repository/update/pr/changelog/azure getChangeLogJSON handles empty Azure tags response 1`] = `
{
  "hasReleaseNotes": false,
  "project": {
    "apiBaseUrl": "https://dev.azure.com/some-org/some-project/_apis/",
    "baseUrl": "https://dev.azure.com/some-org/some-project/",
    "depName": "renovate",
    "repository": "some-repo",
    "sourceDirectory": undefined,
    "sourceUrl": "https://dev.azure.com/some-org/some-project/_git/some-repo/",
    "type": "azure",
  },
  "versions": [
    {
      "changes": [],
      "compare": {},
      "date": undefined,
      "gitRef": undefined,
      "releaseNotes": null,
      "version": "5.6.1",
    },
    {
      "changes": [],
      "compare": {},
      "date": "2020-02-13T15:37:00.000Z",
      "gitRef": undefined,
      "releaseNotes": null,
      "version": "5.6.0",
    },
    {
      "changes": [],
      "compare": {},
      "date": undefined,
      "gitRef": "eba303e91c930292198b2fc57040145682162a1b",
      "releaseNotes": null,
      "version": "5.5.0",
    },
    {
      "changes": [],
      "compare": {},
      "date": "2018-08-24T14:23:00.000Z",
      "gitRef": undefined,
      "releaseNotes": null,
      "version": "5.4.0",
    },
  ],
}
`;

exports[`workers/repository/update/pr/changelog/azure getChangeLogJSON uses Azure tags 1`] = `
{
  "hasReleaseNotes": true,
  "project": {
    "apiBaseUrl": "https://dev.azure.com/some-org/some-project/_apis/",
    "baseUrl": "https://dev.azure.com/some-org/some-project/",
    "depName": "renovate",
    "repository": "some-repo",
    "sourceDirectory": undefined,
    "sourceUrl": "https://dev.azure.com/some-org/some-project/_git/some-repo/",
    "type": "azure",
  },
  "versions": [
    {
      "changes": [],
      "compare": {
        "url": "https://dev.azure.com/some-org/some-project/_git/some-repo/branchCompare?baseVersion=GTv5.6.0&targetVersion=GTv5.6.1",
      },
      "date": undefined,
      "gitRef": undefined,
      "releaseNotes": {
        "notesSourceUrl": "",
        "url": "https://dev.azure.com/some-org/some-project/_git/some-repo/branchCompare?baseVersion=GTv5.6.0&targetVersion=GTv5.6.1",
      },
      "version": "5.6.1",
    },
    {
      "changes": [],
      "compare": {
        "url": "https://dev.azure.com/some-org/some-project/_git/some-repo/branchCompare?baseVersion=GTv5.5.0&targetVersion=GTv5.6.0",
      },
      "date": "2020-02-13T15:37:00.000Z",
      "gitRef": undefined,
      "releaseNotes": {
        "notesSourceUrl": "",
        "url": "https://dev.azure.com/some-org/some-project/_git/some-repo/branchCompare?baseVersion=GTv5.5.0&targetVersion=GTv5.6.0",
      },
      "version": "5.6.0",
    },
    {
      "changes": [],
      "compare": {
        "url": "https://dev.azure.com/some-org/some-project/_git/some-repo/branchCompare?baseVersion=GTv5.4.0&targetVersion=GTv5.5.0",
      },
      "date": undefined,
      "gitRef": "eba303e91c930292198b2fc57040145682162a1b",
      "releaseNotes": {
        "notesSourceUrl": "",
        "url": "https://dev.azure.com/some-org/some-project/_git/some-repo/branchCompare?baseVersion=GTv5.4.0&targetVersion=GTv5.5.0",
      },
      "version": "5.5.0",
    },
    {
      "changes": [],
      "compare": {
        "url": "https://dev.azure.com/some-org/some-project/_git/some-repo/branchCompare?baseVersion=GTv5.2.0&targetVersion=GTv5.4.0",
      },
      "date": "2018-08-24T14:23:00.000Z",
      "gitRef": undefined,
      "releaseNotes": {
        "notesSourceUrl": "",
        "url": "https://dev.azure.com/some-org/some-project/_git/some-repo/branchCompare?baseVersion=GTv5.2.0&targetVersion=GTv5.4.0",
      },
      "version": "5.4.0",
    },
  ],
}
`;

exports[`workers/repository/update/pr/changelog/azure getChangeLogJSON uses Azure tags with error 1`] = `
{
  "hasReleaseNotes": false,
  "project": {
    "apiBaseUrl": "https://dev.azure.com/some-org/some-project/_apis/",
    "baseUrl": "https://dev.azure.com/some-org/some-project/",
    "depName": "renovate",
    "repository": "some-repo",
    "sourceDirectory": undefined,
    "sourceUrl": "https://dev.azure.com/some-org/some-project/_git/some-repo/",
    "type": "azure",
  },
  "versions": [
    {
      "changes": [],
      "compare": {},
      "date": undefined,
      "gitRef": undefined,
      "releaseNotes": null,
      "version": "5.6.1",
    },
    {
      "changes": [],
      "compare": {},
      "date": "2020-02-13T15:37:00.000Z",
      "gitRef": undefined,
      "releaseNotes": null,
      "version": "5.6.0",
    },
    {
      "changes": [],
      "compare": {},
      "date": undefined,
      "gitRef": "eba303e91c930292198b2fc57040145682162a1b",
      "releaseNotes": null,
      "version": "5.5.0",
    },
    {
      "changes": [],
      "compare": {},
      "date": "2018-08-24T14:23:00.000Z",
      "gitRef": undefined,
      "releaseNotes": null,
      "version": "5.4.0",
    },
  ],
}
`;

exports[`workers/repository/update/pr/changelog/azure getChangeLogJSON works without Azure 1`] = `
{
  "hasReleaseNotes": false,
  "project": {
    "apiBaseUrl": "https://dev.azure.com/some-org/some-project/_apis/",
    "baseUrl": "https://dev.azure.com/some-org/some-project/",
    "depName": "renovate",
    "repository": "some-repo",
    "sourceDirectory": undefined,
    "sourceUrl": "https://dev.azure.com/some-org/some-project/_git/some-repo/",
    "type": "azure",
  },
  "versions": [
    {
      "changes": [],
      "compare": {},
      "date": undefined,
      "gitRef": undefined,
      "releaseNotes": null,
      "version": "5.6.1",
    },
    {
      "changes": [],
      "compare": {},
      "date": "2020-02-13T15:37:00.000Z",
      "gitRef": undefined,
      "releaseNotes": null,
      "version": "5.6.0",
    },
    {
      "changes": [],
      "compare": {},
      "date": undefined,
      "gitRef": "eba303e91c930292198b2fc57040145682162a1b",
      "releaseNotes": null,
      "version": "5.5.0",
    },
    {
      "changes": [],
      "compare": {},
      "date": "2018-08-24T14:23:00.000Z",
      "gitRef": undefined,
      "releaseNotes": null,
      "version": "5.4.0",
    },
  ],
}
`;
